Fix booking bug and set order table overflow to scroll

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -465,6 +465,7 @@ main {
       background-color: $primary-background;
       border: 1px solid black;
       height: 50%;
+      overflow: scroll;
       width: 30%;
     }
   
